care/force-app/main/default/objects/Custom_Case_Configuration__mdt/Custom_Case_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>SFORCE-4131/4217 - Omni Routing and Process Optimization</description>
    <label>Custom Case Configuration</label>
    <pluralLabel>Custom Case Configurations</pluralLabel>
</CustomObject>