care/force-app/main/default/objects/Custom_Case_Configuration__mdt/fields/Case_Priority__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority__c</fullName>
    <label>Case Priority</label>
    <length>5</length>
    <type>Text</type>
</CustomField>