care/force-app/main/default/objects/Custom_Case_Configuration__mdt/fields/Case_Queue__c.field-meta.xml
<CustomField>
    <fullName>Case_Queue__c</fullName>
    <label>Case Queue</label>
    <type>TextArea</type>
</CustomField>