care/force-app/main/default/objects/Custom_Case_Configuration__mdt/fields/Case_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Case_RecordType__c</fullName>
    <label>Case RecordType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Mobile Help</fullName>
            </value>
            <value>
                <fullName>International Email</fullName>
            </value>
            <value>
                <fullName>International Call Center</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Galore Marketing Solutions</fullName>
            </value>
            <value>
                <fullName>International NPS</fullName>
            </value>
            <value>
                <fullName>International Safety Alert</fullName>
            </value>
            <value>
                <fullName>NPS</fullName>
            </value>
            <value>
                <fullName>Premier Background Check</fullName>
            </value>
            <value>
                <fullName>Safety Alert</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Social Media International</fullName>
            </value>
            <value>
                <fullName>Social Media US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>