care/force-app/main/default/objects/Custom_Case_Configuration__mdt/fields/Case_Skill__c.field-meta.xml
<CustomField>
    <fullName>Case_Skill__c</fullName>
    <label>Support Skill</label>
    <length>100</length>
    <type>Text</type>
</CustomField>