care/force-app/main/default/objects/Custom_Case_Configuration__mdt/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <label>Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
                <default>true</default>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>