care/force-app/main/default/objects/Custom_Case_Configuration__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>Order__c</columns>
    <columns>MasterLabel</columns>
    <columns>Case_Priority__c</columns>
    <columns>Case_Status__c</columns>
    <columns>Case_Skill__c</columns>
    <columns>Case_RecordType__c</columns>
    <columns>Case_Queue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
    <language>en_US</language>
</ListView>